git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@187 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -143,7 +143,7 @@
 		<!-- Sample SMTP Settings -->
 
 		<!--
-		These settings work with my SBC account
+			These settings work with my SBC account
 		-->
 		
 		<!--
@@ -153,7 +153,7 @@
 		-->
 		
 		<!--
-		These settings work with my GMail account
+			These settings work with my GMail account
 		-->
 		
 		<!--
@@ -166,7 +166,7 @@
 
 
 		<!--
-		These settings work with my GoDaddy account
+			These settings work with my GoDaddy account
 		-->
 
 		<!--		
@@ -177,8 +177,8 @@
 		-->
 
 		<!--
-		Specify the pickup directory if you have the problem described here:
-		http://support.microsoft.com/default.aspx?scid=kb;en-us;816789#8
+			Specify the pickup directory if you have the problem described here:
+			http://support.microsoft.com/default.aspx?scid=kb;en-us;816789#8
 		-->
 
 		<!--
@@ -188,8 +188,8 @@
 
 
 		<!--
-		Ignore this setting unless you are esperiencing the symptoms
-		related to this: http://cr.yp.to/docs/smtplf.html
+			Ignore this setting unless you are esperiencing the symptoms
+			related to this: http://cr.yp.to/docs/smtplf.html
 		-->
 		<!--
 		<add key="SmtpForceReplaceOfBareLineFeeds" value="1"/>
@@ -197,8 +197,8 @@
 
 		
 		<!--
-		By default, emails are UTF8 encoded.  If that doesn't work for you,
-		uncomment the following.
+			By default, emails are UTF8 encoded.  If that doesn't work for you,
+			uncomment the following.
 		-->
 		<!--
 		<add key="BodyEncodingUTF8" value="0"/>
@@ -206,36 +206,37 @@
 
 
 		<!--
-		From Martin:
-		I added a new value to the web.config
-		<add key="CultureName" value="de-DE" />
-		For the US, the setting should be "en-US"!
-		If no value is set the current culture info on the ASP process on the server
-		is used.
 
-		If this culture info is set correctly all parsing is done correctly.
+			From Martin:
+			I added a new value to the web.config
+			<add key="CultureName" value="de-DE" />
+			For the US, the setting should be "en-US"!
+			If no value is set the current culture info on the ASP process on the server
+			is used.
 
-		The original comment here was:
-			If you set CultureName, you don't have to set "DateTimeFormat" and 	"JustDateFormat".
-			If no values are set the default settings of the culture are used.
-			If "DateTimeFormat" or "JustDateFormat" are used, they overwrite the culture
-			settings selected by "CultureName".
-			So the bugtracker will also work completly correct without any of
-			"CultureName", "DateTimeFormat", "JustDateFormat" being set.
-			
-		But somebody else points out:
-			When a search is done including criteria for dates,
-			these dates are parsed using the culture configured as
-			the 'CultureName' in the web config file.
-			This is fine, but the web.config file suggests that the
-			CultureName settings is not needed if DateTimeFormat
-			and JustDateFormat are set. This is not correct since
-			parsing of dates from the search screen does not use
-			either of these settings, only CultureName		
-			
-		So, if you are having trouble with date formats, use all the settings
-		here so that you have the most control.    I'm sorry it' so confusing.   I'm
-		very open to making it simpler here.
+			If this culture info is set correctly all parsing is done correctly.
+
+			The original comment here was:
+				If you set CultureName, you don't have to set "DateTimeFormat" and 	"JustDateFormat".
+				If no values are set the default settings of the culture are used.
+				If "DateTimeFormat" or "JustDateFormat" are used, they overwrite the culture
+				settings selected by "CultureName".
+				So the bugtracker will also work completly correct without any of
+				"CultureName", "DateTimeFormat", "JustDateFormat" being set.
+
+			But somebody else points out:
+				When a search is done including criteria for dates,
+				these dates are parsed using the culture configured as
+				the 'CultureName' in the web config file.
+				This is fine, but the web.config file suggests that the
+				CultureName settings is not needed if DateTimeFormat
+				and JustDateFormat are set. This is not correct since
+				parsing of dates from the search screen does not use
+				either of these settings, only CultureName		
+
+			So, if you are having trouble with date formats, use all the settings
+			here so that you have the most control.    I'm sorry it' so confusing.   I'm
+			very open to making it simpler here.
 		
 		-->
 
@@ -292,12 +293,11 @@
 		<add key="CommentSortOrder" value="desc"/>
 
 		<!--
-
-		When per-project permission is not specified, what is the permission?
-		3 = "reporter" allow adds but after bug is added, only allow posting of additional comments
-		2 = allow everything
-		1 = allow view only
-		0 = hide
+			When per-project permission is not specified, what is the permission?
+			3 = "reporter" allow adds but after bug is added, only allow posting of additional comments
+			2 = allow everything
+			1 = allow view only
+			0 = hide
 		-->
 
 		<add key="DefaultPermissionLevel" value="2"/>
@@ -341,7 +341,7 @@
 
 		-->
 
-		<add key="WindowsAuthentication" value="1"/>
+		<add key="WindowsAuthentication" value="0"/>
 
 		<!--
 			You can have BugTracker.NET check the user's password using an LDAP server instead of
@@ -351,13 +351,7 @@
 			To use LDAP, set AuthenticateUsingLdap to 1 and enter the appropriariate distinguished name.
 			The $REPLACE_WITH_USERNAME$ gets replaced with the username that's typed in by the user
 			when he tries to log on.
-		-->
 
-		<add key="AuthenticateUsingLdap" value="0"/>
-		<add key="LdapServer" value="127.0.0.1"/>
-		<add key="LdapUserDistinguishedName" value="uid=$REPLACE_WITH_USERNAME$,ou=people,dc=mycompany,dc=com"/>
-
-		<!--		
         	The LDAP auth type used when checking users' passwords using LDAP.
         	Choices are:
 				Anonymous
@@ -374,9 +368,18 @@
         	For details, see:
         	http://msdn.microsoft.com/en-us/library/system.directoryservices.protocols.authtype.aspx
 		-->
+		<add key="AuthenticateUsingLdap" value="0"/>
+
+		<!--			
+			These values worked for me when I tested with OpenLDAP
+		-->
+		<!--
+		<add key="LdapServer" value="127.0.0.1"/>
+		<add key="LdapUserDistinguishedName" value="uid=$REPLACE_WITH_USERNAME$,ou=people,dc=mycompany,dc=com"/>
 		<add key="LdapAuthType" value="Basic"/>
-
-
+		-->
+		
+		
 		<!--
 			There's a special user in the database, "guest". Think of it as a user account that can
 			be shared by several people. The guest user can't save settings and can't save searches.
@@ -401,7 +404,7 @@
 			WindowsUserAutoRegistrationUserTemplate
 		-->
 
-		<add key="EnableWindowsUserAutoRegistration" value="1" />
+		<add key="EnableWindowsUserAutoRegistration" value="0" />
 		
 		<!--
 		
@@ -413,10 +416,12 @@
 		<add key="WindowsUserAutoRegistrationUserTemplate" value="guest" />
 
 
-		<add key="EnableWindowsUserAutoRegistrationLdapSearch" value="1" />
+		<add key="EnableWindowsUserAutoRegistrationLdapSearch" value="0" />
 
-		<!--		
-			Authentication type used for search:
+		<!-- 
+			Configure how you want BugTracker.NET to search LDAP for a new user's info.
+
+			Authentication types are as follows:
 				None
 				Secure
 				Encryption
@@ -428,34 +433,54 @@
 				Sealing
 				Delegation
 				ServerBind
-				
 			For details, see:
 			http://msdn.microsoft.com/en-us/library/system.directoryservices.authenticationtypes.aspx				
-		-->
 
-		<!-- 
-			Configure how you want BugTracker.NET to search LDAP for a new user's info.
+		-->
+			
+		<!--			
 			These values worked for me when I tested with OpenLDAP
 		-->
-		<add key="LdapDirectoryEntryPath", value="LDAP://127.0.0.1/DC=mycompany,DC=com" />
-		<add key="LdapDirectoryEntryAuthenticationType", value="Anonymous" />
-		<add key="LdapDirectoryEntryUsername", value="" />
-		<add key="LdapDirectoryEntryPassword", value="" />
-		<add key="LdapDirectorySearcherFilter", value="(uid=$REPLACE_WITH_USERNAME$)" />
+		<!--		
+		<add key="LdapDirectoryEntryPath" value="LDAP://127.0.0.1/DC=mycompany,DC=com" />
+		<add key="LdapDirectoryEntryAuthenticationType" value="Anonymous" />
+		<add key="LdapDirectoryEntryUsername" value="" />
+		<add key="LdapDirectoryEntryPassword" value="" />
+		<add key="LdapDirectorySearcherFilter" value="(uid=$REPLACE_WITH_USERNAME$)" />
+		<add key="LdapFirstName" value="gn" />
+		<add key="LdapLastName" value="sn" />
+		<add key="LdapEmail" value="mail" />
+		<add key="LdapEmailSigniture" value="cn" />
+		-->
+
+		<!--			
+			These values worked for me when I tested with Microsoft "ADAM" on another machine
+		-->
+		<!--
+		<add key="LdapDirectoryEntryPath" value="LDAP://192.168.1.113:389/DC=mycompany,DC=com" />
+		<add key="LdapDirectoryEntryAuthenticationType" value="None" />
+		<add key="LdapDirectoryEntryUsername" value="cn=MyReader,ou=people,dc=mycompany,dc=com" />
+		<add key="LdapDirectoryEntryPassword" value="MY PASSWORD HERE" />
+		<add key="LdapDirectorySearcherFilter" value="(uid=$REPLACE_WITH_USERNAME$)" />
+		<add key="LdapFirstName" value="givenName" />
+		<add key="LdapLastName" value="sn" />
+		<add key="LdapEmail" value="mail" />
+		<add key="LdapEmailSigniture" value="cn" />
+		-->
 
 		<!--
-		TextArea for Custom fields
-		This setting is used to format custom defined fields.  If a field is greater than TextAreaThreshold, it will be
-		displayed as a TextArea instead of a normal Input control.  The number of rows in the TextArea is
-		determined by dividing the field length by TextAreaThreshold up to a maximum value indicated by MaxTextAreaRows.
+			TextArea for Custom fields
+			This setting is used to format custom defined fields.  If a field is greater than TextAreaThreshold, it will be
+			displayed as a TextArea instead of a normal Input control.  The number of rows in the TextArea is
+			determined by dividing the field length by TextAreaThreshold up to a maximum value indicated by MaxTextAreaRows.
 		-->
 		
 		<add key="TextAreaThreshold" value="80"/>
 		<add key="MaxTextAreaRows" value="3"/>
 
 		<!--
-		Some folks don't like the word "bug".   These next four settings allow you to override the text of the
-		logo and the word bugs.
+			Some folks don't like the word "bug".   These next four settings allow you to 
+			override the text of the logo and the word bugs.
 		-->
 		<add key="AppTitle" value="BugTracker.NET"/>
 		<add key="SingularBugLabel" value="bug"/>
