git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@190 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -725,11 +725,15 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="SubversionRepositoryUrl" value="svn://127.0.0.1/svnrepos/"/>  <!-- with the trailing slash!! -->
 		
-		<!-- svn.exe, the Subversion client, needs to be on the web server -->
+		<!-- 
+			svn.exe, the Subversion client, needs to be on the web server
+		-->
 		<add key="SubversionPathToSvn" value="svn.exe"/>
 		
-		<!-- If your Subversion repository doesn't allow anonymous reads, then put 
-		the Subversion user and password here that the web server will pass to svn.exe -->
+		<!-- 
+			If your Subversion repository doesn't allow anonymous reads, then put 
+			the Subversion user and password here that the web server will pass to svn.exe 
+		-->
 		<add key="SubversionUsername" value=""/>
 		<add key="SubversionPassword" value=""/>
 		
@@ -769,10 +773,7 @@ Don't call us, we'll call you."/>
 		
 		<add key="StoreAttachmentsInDatabase" value="1" />
 		<add key="UploadFolder" value="" />
-		<!--<add key="MaxUploadSize" value="1000000" />-->
-		<add key="MaxUploadSize" value="20111222" />
-		
-		
+		<add key="MaxUploadSize" value="5000000" />
 		<!--
 			If set to "1", then passwords need to be at least 8 characters long.
 			The characters in the password need to be from at least 2 of the
@@ -787,7 +788,7 @@ Don't call us, we'll call you."/>
 		<!--
 			Show "Forgot Password?" link.
 		-->
-		<add key="ShowForgotPasswordLink" value="1" />
+		<add key="ShowForgotPasswordLink" value="0" />
 		
 		
 		<!--
@@ -795,7 +796,7 @@ Don't call us, we'll call you."/>
 			You must also set "SelfRegisteredUserTemplate".
 			You should also consider setting "RequireStrongPasswords"
 		-->
-		<add key="AllowSelfRegistration" value="1" />
+		<add key="AllowSelfRegistration" value="0" />
 		
 		
 		<!--
@@ -829,7 +830,7 @@ Don't call us, we'll call you."/>
 			make the search page load slower. Setting it to "0" might result in
 			too many names in the dropdowns on the search page.
 		-->
-		<add key="LimitUsernameDropdownsInSearch" value="1" />
+		<add key="LimitUsernameDropdownsInSearch" value="0" />
 				
 		<!--
 			Enabling tags lets you mark bugs with your own free-form keywords and 
@@ -859,7 +860,7 @@ Don't call us, we'll call you."/>
 			But you might have problems on  Windows Server 2000:
 			http://support.microsoft.com/?kbid=902780
 		-->
-		<add key="UseTransmitFileInsteadOfWriteFile" value="1" />
+		<add key="UseTransmitFileInsteadOfWriteFile" value="0" />
 		
 
 		<!--
@@ -870,11 +871,15 @@ Don't call us, we'll call you."/>
 		<add key="EnableSeen" value="0" />
 				
 		
-		<!--
-		UTF-8
-		-->
-		<add key="ExportToExcelCharset" value="UTF-8" />
-				
+		
+		
+<!--
+	UTF-8
+-->
+<add key="ExportToExcelCharset" value="UTF-8" />
+		
+		
+		
 
 	</btnetSettings>
 
