git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@193 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -36,7 +36,9 @@
 		<!-- A few people over the years have needed to override the default IIS settings...
 		<httpRuntime executionTimeout="300" maxRequestLength="51200"/>
 		-->
-	
+
+
+
 	</system.web>
 
 	<btnetSettings>
@@ -144,10 +146,13 @@
 		<!--
 			These settings work with my SBC account
 		-->
+
 		
 		<!--
-		<add key="SmtpServer" value="smtp.sbcglobal.yahoo.com"/>
+		<add key="SmtpServer" value="smtp.att.yahoo.com"/>
 		<add key="SmtpServerAuthenticateUser" value="ctrager@sbcglobal.net"/>
+		<add key="SmtpServerPort" value="465"/>
+		<add key="SmtpUseSSL" value="1"/>
 		<add key="SmtpServerAuthenticatePassword" value="MY PASSWORD"/>
 		-->
 		
@@ -155,15 +160,13 @@
 			These settings work with my GMail account
 		-->
 		
-		<!--
+		<!--		
 		<add key="SmtpServer" value="smtp.gmail.com"/>
 		<add key="SmtpServerAuthenticateUser" value="ctrager@gmail.com"/>
 		<add key="SmtpServerPort" value="465"/>
 		<add key="SmtpUseSSL" value="1"/>
 		<add key="SmtpServerAuthenticatePassword" value="MY PASSWORD"/>
 		-->
-
-
 		<!--
 			These settings work with my GoDaddy account
 		-->
