git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@202 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -869,8 +869,28 @@ Don't call us, we'll call you."/>
 		<add key="EnableSeen" value="0" />
 
 
-<add key="EnableWhatsNewPage" value="1" />
-<add key="WhatsNewPageIntervalInSeconds" value="30" />
+		<!--
+			Enabling this adds a "news" link to the menu that goes across the page.
+			This is an experimental feature.  Click on the "news" page, leave it up, 
+			and it will refresh itself as people add and change bugs.
+			It doesn't obey any permissions, so you probably don't want to use this
+			page if you also use project or organization permissions.
+		-->
+		<!--
+		<add key="EnableWhatsNewPage" value="1" />
+		<add key="WhatsNewPageIntervalInSeconds" value="30" />
+		-->
+
+		<!--
+			Something I use for debugging, in conjunction with the view_memory_log.aspx.
+			Only useful for a programmer.  If you are interested, search the code
+			for MemoryLogEnabled.
+		-->
+		<!--
+		<add key="MemoryLogEnabled" value="1" />		
+		-->
+
+
 		
 		
 <!--
@@ -879,7 +899,6 @@ Don't call us, we'll call you."/>
 <add key="ExportToExcelCharset" value="UTF-8" />
 		
 		
-<add key="MemoryLogEnabled" value="1" />		
 
 	</btnetSettings>
 
