git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@206 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -748,12 +748,11 @@ Don't call us, we'll call you."/>
 		<!--
 		<add key="MemoryLogEnabled" value="1" />		
 		-->
-		<!--
+		<!--      
 	UTF-8           
 -->
 		<add key="ExportToExcelCharset" value="UTF-8"/>
-		<add key="LuceneIndexFolder" value="c:\temp\lucene_index" />
 		<add key="EnableLucene" value="1" /> 
-		<add key="LuceneIndexFolder" value="App_Data\lucene_index" /> 
+		<!--<add key="LuceneIndexFolder" value="App_Data\lucene_index" /> -->
 	</btnetSettings>
 </configuration>
