git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@213 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -23,7 +23,8 @@
 			<assemblies>
 				<add assembly="System.DirectoryServices.Protocols, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
 				<add assembly="System.DirectoryServices, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Runtime.Remoting, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/></assemblies>
+				<add assembly="System.Runtime.Remoting, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+			</assemblies>
 		</compilation>
 		<pages validateRequest="true"/>
 		<!-- A few people over the years have needed to override the default IIS settings...
@@ -602,8 +603,8 @@ Don't call us, we'll call you."/>
 			or vice versa, or turn them both on.
 	
 		-->
-		<add key="SubversionRepositoryUrl" value="svn://127.0.0.1/svnrepos/"/>
-		<!-- with the trailing slash!! -->
+		<add key="SubversionRepositoryUrl" value="svn://127.0.0.1/svnrepos/"/>  <!-- with the trailing slash!! -->
+		
 		<!-- 
 			svn.exe, the Subversion client, needs to be on the web server
 		-->
@@ -709,7 +710,8 @@ Don't call us, we'll call you."/>
 			maybe not.
 			
 		-->
-		<add key="EnableTags" value="1"/>
+		<add key="EnableTags" value="0" />
+		
 		<!--
 			I'm not 100% sure that FCKEditor, or the way I'm using FCKEditor, 
 			is secure.  It might be possible to use it for Cross-Site-Scripting.
@@ -748,11 +750,20 @@ Don't call us, we'll call you."/>
 		<!--
 		<add key="MemoryLogEnabled" value="1" />		
 		-->
-		<!--      
-	UTF-8           
--->
-		<add key="ExportToExcelCharset" value="UTF-8"/>
+		
+		<!--
+			Use this to turn on/off the full text search in the upper right corner.
+			I think, the only reason to turn it off is if you have some technical problem 
+			with it.
+		-->
 		<add key="EnableLucene" value="1" /> 
-		<!--<add key="LuceneIndexFolder" value="App_Data\lucene_index" /> -->
+		<add key="LuceneIndexFolder" value="App_Data\lucene_index" />
+	
+		
+		<!--      
+			UTF-8           
+		-->
+		<add key="ExportToExcelCharset" value="UTF-8"/>
+
 	</btnetSettings>
 </configuration>
