--- a/Web.config
+++ b/Web.config
@@ -758,7 +758,12 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="EnableLucene" value="1" /> 
 		<add key="LuceneIndexFolder" value="App_Data\lucene_index" />
-	
+
+		<!--
+			Adds a button to the top of the form too.
+		-->
+		<add key="DisplayAnotherButtonInEditBugPage" value="0" /> 
+
 		
 		<!--      
 			UTF-8           
