git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@227 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -616,6 +616,10 @@ Don't call us, we'll call you."/>
 		<add key="SubversionUsername" value=""/>
 		<add key="SubversionPassword" value=""/>
 		<!-- 
+			These get appended to every SVN command.  
+		-->
+		<add key="SubversionAdditionalArgs" value=""/>
+		<!-- 
 			This adds another link, "WebSvn" to view_svn_file_revisions.aspx, a link to WebSvn. 
 			Make sure to replace the & symbol with &amp; in your URL.
 			The logic in view_svn_file_revisions.aspx replaces $PATH and $REV with
