git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@237 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -164,60 +164,62 @@
 		<!--
 		<add key="BodyEncodingUTF8" value="0"/>
 		-->
-		<!--
 
-			From Martin:
-			I added a new value to the web.config
-			<add key="CultureName" value="de-DE" />
-			For the US, the setting should be "en-US"!
-			If no value is set the current culture info on the ASP process on the server
-			is used.
+		<!-- 
+			Dates fetched by the datepicker popup are formatted
+			using the following specifiers.  These dates are used in 
+			the SQL statements, so they need to be compatible with
+			your database.
 
-			If this culture info is set correctly all parsing is done correctly.
-
-			The original comment here was:
-				If you set CultureName, you don't have to set "DateTimeFormat" and 	"JustDateFormat".
-				If no values are set the default settings of the culture are used.
-				If "DateTimeFormat" or "JustDateFormat" are used, they overwrite the culture
-				settings selected by "CultureName".
-				So the bugtracker will also work completly correct without any of
-				"CultureName", "DateTimeFormat", "JustDateFormat" being set.
-
-			But somebody else points out:
-				When a search is done including criteria for dates,
-				these dates are parsed using the culture configured as
-				the 'CultureName' in the web config file.
-				This is fine, but the web.config file suggests that the
-				CultureName settings is not needed if DateTimeFormat
-				and JustDateFormat are set. This is not correct since
-				parsing of dates from the search screen does not use
-				either of these settings, only CultureName		
-
-			So, if you are having trouble with date formats, use all the settings
-			here so that you have the most control.    I'm sorry it' so confusing.   I'm
-			very open to making it simpler here.
+			
+			Set the second to your local date format without time
 		
+			   The format can be combinations of the following:
+			   d  - day of month (no leading zero)
+			   dd - day of month (two digit)
+			   D  - day name short
+			   DD - day name long
+			   m  - month of year (no leading zero)
+			   mm - month of year (two digit)
+			   M  - month name short
+			   MM - month name long
+			   y  - year (two digit)
+			   yy - year (four digit)		
+			   
+			   
 		-->
+		<add key="DatepickerDateFormat" value="yy-mm-dd"/>
+		
+		<!--
+			Dates fetched from the database are converted for display
+			using EITHER the cultural setting or the custom
+			"DateTimeFormat" string.
+		-->
+		
 		<!--
 		<add key="CultureName" value="de-DE" />
 		<add key="CultureName" value="en-US" />
-		-->
+		--> 
+		
 		<!--
-			Set the first to your local date-time format.
-			Set the second to your local date format without time
+			See "Custom Date and Time Format Strings" for the .NET
+			DateTime for all the format specifiers:
+			http://msdn.microsoft.com/en-us/library/8kb3ddd4.aspx
 		-->
-		<!-- American style -->
+
 		<add key="DateTimeFormat" value="yyyy-MM-dd h:mm tt"/>
-		<add key="JustDateFormat" value="yyyy-MM-dd"/>
 		<!-- European style
-		<add key="DateTimeFormat" value="dd.MM.yyyy HH:mm" />
-		<add key="JustDateFormat" value="dd.MM.yyyy" />
+		<add key="DateTimeFormat" value="dd.MM.yy HH:mm" />
 		-->
+		
 		<!--
 		Format SQL Server expects the dates to be in
 		This doesn't affect what user sees on web pages.
 		-->
 		<add key="SQLServerDateFormat" value="yyyyMMdd HH\:mm\:ss"/>
+		
+		
+		
 		<!--
 			If category/project/status/priority are not enough bug attributes
 			for you, here's one more that you can name yourself.
