git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@238 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -190,35 +190,32 @@
 		-->
 		<add key="DatepickerDateFormat" value="yy-mm-dd"/>
 		
-		<!--
-			Dates fetched from the database are converted for display
-			using EITHER the cultural setting or the custom
-			"DateTimeFormat" string.
-		-->
 		
 		<!--
-		<add key="CultureName" value="de-DE" />
-		<add key="CultureName" value="en-US" />
-		--> 
-		
-		<!--
+			These settings control how dates are displayed in the
+			web pages.  It's not a perfect scheme, but the logic
+			tries to display just the date where that seems to be
+			the correct thing to do, and both the date and the time
+			when that seems to be the correct thing to do.
+			
 			See "Custom Date and Time Format Strings" for the .NET
-			DateTime for all the format specifiers:
+			System.DateTime for the format specifiers you can use:
 			http://msdn.microsoft.com/en-us/library/8kb3ddd4.aspx
 		-->
 
 		<add key="DateTimeFormat" value="yyyy-MM-dd h:mm tt"/>
+		<add key="JustDateFormat" value="yyyy-MM-dd"/>
 		<!-- European style
 		<add key="DateTimeFormat" value="dd.MM.yy HH:mm" />
 		-->
-		
 		<!--
-		Format SQL Server expects the dates to be in
-		This doesn't affect what user sees on web pages.
+			This is used to convert the datetime into the format
+			expected by SQL Server.
+		
+			Format SQL Server expects the dates to be in
+			This doesn't affect what user sees on web pages.
 		-->
 		<add key="SQLServerDateFormat" value="yyyyMMdd HH\:mm\:ss"/>
-		
-		
 		
 		<!--
 			If category/project/status/priority are not enough bug attributes
