git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@239 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -167,10 +167,7 @@
 
 		<!-- 
 			Dates fetched by the datepicker popup are formatted
-			using the following specifiers.  These dates are used in 
-			the SQL statements, so they need to be compatible with
-			your database.
-
+			using the following specifiers.
 			
 			Set the second to your local date format without time
 		
@@ -194,9 +191,9 @@
 		<!--
 			These settings control how dates are displayed in the
 			web pages.  It's not a perfect scheme, but the logic
-			tries to display just the date where that seems to be
-			the correct thing to do, and both the date and the time
-			when that seems to be the correct thing to do.
+			tries to display both the date and the time when that
+			seems to be the right thing, and just the date, without
+			the time, when that seems to be the right thing.
 			
 			See "Custom Date and Time Format Strings" for the .NET
 			System.DateTime for the format specifiers you can use:
@@ -208,14 +205,15 @@
 		<!-- European style
 		<add key="DateTimeFormat" value="dd.MM.yy HH:mm" />
 		-->
+		
 		<!--
 			This is used to convert the datetime into the format
 			expected by SQL Server.
 		
 			Format SQL Server expects the dates to be in
 			This doesn't affect what user sees on web pages.
-		-->
 		<add key="SQLServerDateFormat" value="yyyyMMdd HH\:mm\:ss"/>
+		-->
 		
 		<!--
 			If category/project/status/priority are not enough bug attributes
