git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@249 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -200,6 +200,7 @@
 			http://msdn.microsoft.com/en-us/library/8kb3ddd4.aspx
 		-->
 
+		<!-- American style -->
 		<add key="DateTimeFormat" value="yyyy-MM-dd h:mm tt"/>
 		<add key="JustDateFormat" value="yyyy-MM-dd"/>
 		<!-- European style
