--- a/Web.config
+++ b/Web.config
@@ -402,7 +402,7 @@
 			Some folks don't like the word "bug".   These next four settings allow you to 
 			override the text of the logo and the word bugs.
 		-->
-		<add key="AppTitle" value="BugTracker.NET"/>
+		<add key="AppTitle" value="QQQ"/>
 		<add key="SingularBugLabel" value="bug"/>
 		<add key="PluralBugLabel" value="bugs"/>
 		<!-- customize marker for creating hyperlinks in bug comments -->
@@ -765,6 +765,11 @@ Don't call us, we'll call you."/>
 			Adds a button to the top of the form too.
 		-->
 		<add key="DisplayAnotherButtonInEditBugPage" value="0" /> 
+
+		<!--
+			Adds a link to the "tasks" page, which you can use for sub-tasks and time tracking
+		-->
+		<add key="EnableTasks" value="1" /> 
 
 		
 		<!--      
