git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@270 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -767,10 +767,33 @@ Don't call us, we'll call you."/>
 		<add key="DisplayAnotherButtonInEditBugPage" value="0" /> 
 
 		<!--
-			Adds a link to the "tasks" page, which you can use for sub-tasks and time tracking
+			Adds the "tasks/time" link to edit_bug page, which you can use for sub-tasks, time tracking,
+			estimating...
+			
+			There are probably MORE fields than you really want to use, so use the "ShowTask..."
+			settings to turn some off.
 		-->
 		<add key="EnableTasks" value="1" /> 
+		<add key="TaskDefaultDurationUnits" value="hours" /> 
+		<add key="TaskDefaultHour" value="09" /> 
+		<add key="TaskDefaultStatus" value="[no status]" /> 
 
+		<!--
+			Use these settings to show LESS in the tasks/time pages
+		-->
+		<!--
+		<add key="ShowTaskAssignedTo" value="0" /> 
+		<add key="ShowTaskPlannedStartDate" value="0" /> 
+		<add key="ShowTaskActualStartDate" value="0" /> 
+		<add key="ShowTaskPlannedEndDate" value="0" /> 
+		<add key="ShowTaskActualEndDate" value="0" /> 
+		<add key="ShowTaskPlannedDuration" value="0" /> 
+		<add key="ShowTaskActualDuration" value="0" /> 
+		<add key="ShowTaskDurationUnits" value="0" /> 
+		<add key="ShowTaskPercentComplete" value="0" /> 
+		<add key="ShowTaskStatus" value="0" /> 
+		<add key="ShowTaskSortSequence" value="0" /> 
+		-->
 		
 		<!--      
 			UTF-8           
