git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@274 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -767,19 +767,31 @@ Don't call us, we'll call you."/>
 		<add key="DisplayAnotherButtonInEditBugPage" value="0" /> 
 
 		<!--
-			Adds the "tasks/time" link to edit_bug page, which you can use for sub-tasks, time tracking,
-			estimating...
-			
-			There are probably MORE fields than you really want to use, so use the "ShowTask..."
-			settings to turn some off.
+			Adds the "tasks/time" link to edit_bug page, which you can use for entering
+			sub-tasks, entering time-tracking info, entering scheduling info.   It's
+			flexible.   See the "ShowTask.." settings below also.
 		-->
 		<add key="EnableTasks" value="1" /> 
+		
+		<!--  These control the default selections in the task dropdowns -->
 		<add key="TaskDefaultDurationUnits" value="hours" /> 
 		<add key="TaskDefaultHour" value="09" /> 
 		<add key="TaskDefaultStatus" value="[no status]" /> 
 
 		<!--
-			Use these settings to show LESS in the tasks/time pages
+			Use these settings to show LESS in the tasks/time pages.
+			
+			So, for example, if you are using tasks just for time tracking,
+			you might only want to show the "Actual Duration" column and
+			hide the others.
+			
+			Or,if you are using tasks as sub-tasks, you might only want to
+			show the "Status" and "Assigned To" columns and hide the 
+			others.
+			
+			Or, if you are using tasks for estimation, you might only want
+			to show the "Planned Duration" and "Percent Complete" columns.
+			
 		-->
 		<!--
 		<add key="ShowTaskAssignedTo" value="0" /> 
