git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@276 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -807,6 +807,13 @@ Don't call us, we'll call you."/>
 		<add key="ShowTaskSortSequence" value="0" /> 
 		-->
 		
+		
+		<!--
+			Enables the "relationships" link on the edit bug page.
+		-->
+		<add key="EnableRelationships" value="0" /> 
+
+		
 		<!--      
 			UTF-8           
 		-->
