git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@286 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -1,23 +1,23 @@
 <configuration xmlns="http://schemas.microsoft.com/.NetConfiguration/v2.0">
 	<configSections>
-		<section name="btnetSettings" type="System.Configuration.NameValueFileSectionHandler,System, Version=1.0.3300.0,Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
 	</configSections>
 	<system.web>
 		<!--
 
-		BugTracker.NET is not comaptible with Session serialization.
-		
+		BugTracker.NET is not compatible with Session serialization.
+
 		Your "sessionState" setting has to be "InProc".		
 		-->
+
 		<!-- for testing -->
 		<!--  
-<sessionState
-    mode="SQLServer"
-    sqlConnectionString="server=(local);user id=sa;password=;Trusted_Connection=no"
-    cookieless="false"
-    timeout="20"
-/>		 
--->
+		<sessionState
+			mode="SQLServer"
+			sqlConnectionString="server=(local);user id=sa;password=;Trusted_Connection=no"
+			cookieless="false"
+			timeout="20"
+		/>		 
+		-->
 		<sessionState mode="InProc" timeout="20"/>
 		<compilation debug="true">
 			<assemblies>
@@ -31,7 +31,7 @@
 		<httpRuntime executionTimeout="300" maxRequestLength="51200"/>
 		-->
 	</system.web>
-	<btnetSettings>
+	<appSettings>
 		<!-- 
 
 			********* QUICK START *************
@@ -814,5 +814,5 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="ExportToExcelCharset" value="UTF-8"/>
 
-	</btnetSettings>
+	</appSettings>
 </configuration>
