git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@300 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -2,23 +2,15 @@
 	<configSections>
 	</configSections>
 	<system.web>
+
 		<!--
-
 		BugTracker.NET is not compatible with Session serialization.
-
-		Your "sessionState" setting has to be "InProc".		
+		
+		Timeout session after 120 minutes
 		-->
+		
+		<sessionState mode="InProc" timeout="120"/>
 
-		<!-- for testing -->
-		<!--  
-		<sessionState
-			mode="SQLServer"
-			sqlConnectionString="server=(local);user id=sa;password=;Trusted_Connection=no"
-			cookieless="false"
-			timeout="20"
-		/>		 
-		-->
-		<sessionState mode="InProc" timeout="20"/>
 		<compilation debug="true">
 			<assemblies>
 				<add assembly="System.DirectoryServices.Protocols, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
