--- a/Web.config
+++ b/Web.config
@@ -728,10 +728,10 @@ Don't call us, we'll call you."/>
 			It doesn't obey any permissions, so you probably don't want to use this
 			page if you also use project or organization permissions.
 		-->
-		<!--
+		
 		<add key="EnableWhatsNewPage" value="1" />
 		<add key="WhatsNewPageIntervalInSeconds" value="30" />
-		-->
+		
 		<!--
 			Something I use for debugging, in conjunction with the view_memory_log.aspx.
 			Only useful for a programmer.  If you are interested, search the code
@@ -799,8 +799,17 @@ Don't call us, we'll call you."/>
 		<!--
 			Enables the "relationships" link on the edit bug page.
 		-->
-		<add key="EnableRelationships" value="0" /> 
+		<add key="EnableRelationships" value="1" /> 
 
+		
+		<!--
+			Different versions of ASP.NET give the form different names.  If you are
+			having problems paging or sorting the bug list, do a view source to see
+			what the form name is, and then put that here.			
+		-->
+		<!--
+		<add key="AspNetFormId" value="ctl00" />
+		-->
 		
 		<!--      
 			UTF-8                 
