git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@302 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -325,7 +325,7 @@
 			The new user will be a clone of the user specified in
 			WindowsUserAutoRegistrationUserTemplate
 		-->
-		<add key="EnableWindowsUserAutoRegistration" value="0"/>
+		<add key="EnableWindowsUserAutoRegistration" value="1"/>
 		<!--
 		
 			When creating a new user as a result of a auto-registration
@@ -659,7 +659,7 @@ Don't call us, we'll call you."/>
 			You must also set "SelfRegisteredUserTemplate".
 			You should also consider setting "RequireStrongPasswords"
 		-->
-		<add key="AllowSelfRegistration" value="0"/>
+		<add key="AllowSelfRegistration" value="1"/>
 		<!--
 			When creating a new user as a result of a self-registration,
 			use an existing user's settings, permissions, etc as a template
@@ -804,12 +804,32 @@ Don't call us, we'll call you."/>
 		
 		<!--
 			Different versions of ASP.NET give the form different names.  If you are
-			having problems paging or sorting the bug list, do a view source to see
-			what the form name is, and then put that here.			
+			having problems paging or sorting the bug list, if you are getting 
+			javascript errors, then do a view source to see	what the form name is, 
+			and then put that here.			
 		-->
 		<!--
 		<add key="AspNetFormId" value="ctl00" />
 		-->
+		
+		<!--
+			If you want to create users automatically from incoming emails, then 
+			set this value to the same BugTracker.NET username as btnet_service.exe.
+			So, for example, if btnet_service.exe logs on as "email", then set this
+			to "email".
+			
+			BugTracker.NET will create new users by copying the username specified
+			in the "CreateUsersFromEmailTemplate" setting.
+			
+			The new users username will be the "from" email address.
+		-->
+		<add key="CreateUserFromEmailAddressIfThisUsername" value="btnet_service.exe username goes here"/>
+
+		<!--
+			The new users created via email will be clones of the user specified here.
+		-->
+		<add key="CreateUsersFromEmailTemplate" value="guest"/>
+		
 		
 		<!--      
 			UTF-8                 
