git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@321 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -22,6 +22,9 @@
 		<!-- A few people over the years have needed to override the default IIS settings...
 		<httpRuntime executionTimeout="300" maxRequestLength="51200"/>
 		-->
+		
+		<!-- for my testing <globalization culture="de-DE" uiCulture="en-US" /> -->
+
 	</system.web>
 	<appSettings>
 		<!-- 
@@ -49,6 +52,7 @@
 		<!--
 			Change this to point to your database
 		-->
+
 		<add key="ConnectionString" value="server=(local);database=btnet3;user id=sa;password=;Trusted_Connection=no"/>
 		<!--
 			Used when creating absolute href's.  For example, in notification emails.
@@ -827,7 +831,6 @@ Don't call us, we'll call you."/>
 			The new users created via email will be clones of the user specified here.
 		-->
 		<add key="CreateUsersFromEmailTemplate" value="guest"/>
-		
 		
 		<!--      
 			UTF-8                 
