git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@331 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -53,7 +53,7 @@
 			Change this to point to your database
 		-->
 
-		<add key="ConnectionString" value="server=(local);database=btnet3;user id=sa;password=;Trusted_Connection=no"/>
+		<add key="ConnectionString" value="server=(local)\SQLEXPRESS;database=btnet;user id=sa;password=x;Trusted_Connection=no"/>
 		<!--
 			Used when creating absolute href's.  For example, in notification emails.
 			Don't forget trailing slash!.
