git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@335 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -820,6 +820,15 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="CreateUsersFromEmailTemplate" value="guest"/>
 		
+		<!--
+			For throttling brute force attempts, only allow N failed attempts in the most recent N minutes
+			for a given username.
+		-->			
+		<!--
+		<add key="FailedLoginAttemptsMinutes" value="10"/>
+		<add key="FailedLoginAttemptsAllowed" value="10"/>
+		-->
+		
 		<!--      
 			 UTF-8                 
 		-->
