git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@340 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -88,7 +88,7 @@
 			You will receive an email whenever the bug is updated.
 		-->
 		<add key="NotificationEmailEnabled" value="1"/>
-		<add key="NotificationEmailFrom" value="FROM EMAIL HERE"/>
+		<add key="NotificationEmailFrom" value="dont_reply@example.com"/>
 		<!--
 			This controls the format of the subject of the email notifications.
 			The available variables are:
@@ -831,8 +831,8 @@ Don't call us, we'll call you."/>
 		
 		<!--      
 			 UTF-8                 
-		-->
-		<add key="ExportToExcelCharset" value="UTF-8"/>
+		--> 
+		<add key="ExportToExcelCharset" value="UTF-8"/>   
 
 	</appSettings>
 </configuration>
