git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@348 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -54,6 +54,7 @@
 		-->
 
 		<add key="ConnectionString" value="server=(local)\SQLEXPRESS;database=btnet;user id=sa;password=x;Trusted_Connection=no"/>
+		
 		<!--
 			Used when creating absolute href's.  For example, in notification emails.
 			Don't forget trailing slash!.
@@ -828,6 +829,24 @@ Don't call us, we'll call you."/>
 		<add key="FailedLoginAttemptsMinutes" value="10"/>
 		<add key="FailedLoginAttemptsAllowed" value="10"/>
 		-->
+		
+		<!--
+			Controls whether bug posts are displayed with the most recent listed first, "desc"
+			or the least recent listed first, "asc"
+		-->
+		<!--
+		<add key="CommentSortOrder" value="desc"/>
+		-->
+		
+		<!--
+			The times in the database are in the server's time zone.
+			If all your users are in another time zone and you'd like to display the times
+			in that, use this offset.
+		-->
+		<!--
+			<add key="DisplayTimeOffsetInHours" value="0"/>
+		-->
+		
 		
 		<!--      
 			 UTF-8                 
