git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@349 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -438,7 +438,7 @@
 		<add key="CustomBugLinkUrl" value="your_url.aspx"/>
 		-->
 		<!--
-			You can add to the menu, just to the left of the "about" link
+			You can add to the menu, just to the left of the "go to ID" button.
 			You have to HTML encode any HTML tags embedded here.
 		-->
 		<!--
