git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@353 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -691,7 +691,7 @@ Don't call us, we'll call you."/>
 			maybe not.
 			
 		-->
-		<add key="EnableTags" value="0" />
+		<add key="EnableTags" value="1" />
 		
 		<!--
 			I'm not 100% sure that FCKEditor, or the way I'm using FCKEditor, 
@@ -814,12 +814,12 @@ Don't call us, we'll call you."/>
 			
 			The new users username will be the "from" email address.
 		-->
-		<add key="CreateUserFromEmailAddressIfThisUsername" value="btnet_service.exe username goes here"/>
+		<add key="CreateUserFromEmailAddressIfThisUsername" value="email"/>
 
 		<!--
 			The new users created via email will be clones of the user specified here.
 		-->
-		<add key="CreateUsersFromEmailTemplate" value="guest"/>
+		<add key="CreateUsersFromEmailTemplate" value="foobar"/>
 		
 		<!--
 			For throttling brute force attempts, only allow N failed attempts in the most recent N minutes
@@ -847,7 +847,7 @@ Don't call us, we'll call you."/>
 			<add key="DisplayTimeOffsetInHours" value="0"/>
 		-->
 		
-		
+		      
 		<!--      
 			 UTF-8                 
 		--> 
